bodhi-aws-main/deployment/distribution/oidc-auth/overlays/keycloak/oauth2-proxy-signout-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: oauth2-proxy-logout
  namespace: auth
spec:
  gateways:
    - kubeflow/kubeflow-gateway
  hosts:
    - console.bodhimlops.xyz
  http:
    - match:
        - uri:
            prefix: /logout
      rewrite:
        uri: /oauth2/sign_out
      route:
        - destination:
            host: oauth2-proxy.auth.svc.cluster.local
            port:
              number: 4180
      headers:
        request:
          set:
            X-Auth-Request-Redirect: https://auth.bodhimlops.xyz/auth/realms/kubeflow/protocol/openid-connect/logout?redirect_uri=https%%3A%%2F%%2Fconsole.bodhimlops.xyz
